// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageComposerUrlPreview > renders a preview 1`] = `
<div>
  <div
    class="MessageComposerUrlPreview-module_wrapper MessageComposerUrlPreview-module_collapsed"
  >
    <div
      class="MessageComposerUrlPreview-module_summary"
    >
      <span
        class="MessageComposerUrlPreview-module_left"
      >
        <span>
          <div
            class="MessageComposerUrlPreview-module_summaryIcon"
            style="background-color: hsl(-1952422089, 100%, var(--icon-lightness));"
          >
            M
          </div>
        </span>
        <span
          class="MessageComposerUrlPreview-module_linkCount"
        >
          1
           link
        </span>
      </span>
      <span>
        <button
          class="MessageComposerUrlPreview-module_collapse MessageComposerUrlPreview-module_spanLike"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`MessageComposerUrlPreview > renders a preview with an image 1`] = `
<div>
  <div
    class="MessageComposerUrlPreview-module_wrapper MessageComposerUrlPreview-module_collapsed"
  >
    <div
      class="MessageComposerUrlPreview-module_summary"
    >
      <span
        class="MessageComposerUrlPreview-module_left"
      >
        <span>
          <div
            class="MessageComposerUrlPreview-module_summaryIcon"
          >
            <img
              alt="The element logo"
              src="/static/wideImage.png"
            />
          </div>
        </span>
        <span
          class="MessageComposerUrlPreview-module_linkCount"
        >
          1
           link
        </span>
      </span>
      <span>
        <button
          class="MessageComposerUrlPreview-module_collapse MessageComposerUrlPreview-module_spanLike"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 14.95q-.2 0-.375-.062a.9.9 0 0 1-.325-.213l-4.6-4.6a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l3.9 3.9 3.9-3.9a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7l-4.6 4.6q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;
